--- a/index.html
+++ b/index.html
@@ -215,8 +215,12 @@
         
         if (p1health <= 0) {
             document.getElementById('victoryMessage').innerText = "Opponent wins";
+            document.getElementById('attackButton').disabled = true;
+            document.getElementById('defendButton').disabled = true;
         } else if (o1health <= 0) {
             document.getElementById('victoryMessage').innerText = "Player wins";
+            document.getElementById('attackButton').disabled = true;
+            document.getElementById('defendButton').disabled = true;
         }
     }
     </script>
